src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G002.py.snap
---
source: src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- kind:
    LoggingPercentFormat: ~
  location:
    row: 3
    column: 13
  end_location:
    row: 3
    column: 34
  fix: ~
  parent: ~

