src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G101_2.py.snap
---
source: src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- kind:
    LoggingExtraAttrClash: name
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 21
  fix: ~
  parent: ~

