src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G201.py.snap
---
source: src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- kind:
    LoggingExcInfo: ~
  location:
    row: 3
    column: 8
  end_location:
    row: 3
    column: 13
  fix: ~
  parent: ~

