src/rules/flake8_logging_format/snapshots/ruff__rules__flake8_logging_format__tests__G202.py.snap
---
source: src/rules/flake8_logging_format/mod.rs
expression: diagnostics
---
- kind:
    LoggingRedundantExcInfo: ~
  location:
    row: 3
    column: 33
  end_location:
    row: 3
    column: 46
  fix: ~
  parent: ~

